--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social Network</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="./Css/main.Css">
 </head>
 
@@ -30,7 +32,7 @@
                     <li class="nav-item">
                         <a href="#joinus " class="nav-link">Join Us</a>
                     </li>
-                </ul> 
+                </ul>
             </div>
         </div>
     </nav>
@@ -45,18 +47,10 @@
                         </h1>
                         <div class="d-flex">
                             <div class="p-3 align-self-start">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
-                                    <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
-                                  </svg>
-                            </div>
-                            <div class="p-3 align-self-end">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, voluptatibus?
-                            </div>
-                        </div>
-                        <div class="d-flex">
-                            <div class="p-3 align-self-start">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
-                                    <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-caret-right-fill" viewBox="0 0 16 16">
+                                    <path
+                                        d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z" />
                                 </svg>
                             </div>
                             <div class="p-3 align-self-end">
@@ -65,8 +59,22 @@
                         </div>
                         <div class="d-flex">
                             <div class="p-3 align-self-start">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
-                                    <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-caret-right-fill" viewBox="0 0 16 16">
+                                    <path
+                                        d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z" />
+                                </svg>
+                            </div>
+                            <div class="p-3 align-self-end">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, voluptatibus?
+                            </div>
+                        </div>
+                        <div class="d-flex">
+                            <div class="p-3 align-self-start">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-caret-right-fill" viewBox="0 0 16 16">
+                                    <path
+                                        d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z" />
                                 </svg>
                             </div>
                             <div class="p-3 align-self-end">
@@ -76,7 +84,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="card text-center">
-                            <div class="cor-body">
+                            <div class="card-body">
                                 <h3>Join Us</h3>
                                 <p>Please fill out the form</p>
                                 <form>
@@ -87,10 +95,12 @@
                                         <input type="email" class="form-control form-control-lg" placeholder="Email">
                                     </div>
                                     <div class="mb-3">
-                                        <input type="password" class="form-control form-control-lg" placeholder="Password">
+                                        <input type="password" class="form-control form-control-lg"
+                                            placeholder="Password">
                                     </div>
                                     <div class="mb-3">
-                                        <input type="password" class="form-control form-control-lg" placeholder="Repassword">
+                                        <input type="password" class="form-control form-control-lg"
+                                            placeholder="Repassword">
                                     </div>
                                     <div class="d-grid mb-2">
                                         <button type="submit" class="btn  btn-outline-light">Submit</button>
@@ -109,7 +119,9 @@
             <div class="row">
                 <div class="col text-center py-5">
                     <h1 class="display-4">Discover</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio adipisci iste voluptatibus, earum at officia! Minus illo dicta molestiae maxime delectus blanditiis sed ipsum tempore sequi architecto labore, eligendi cum.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio adipisci iste voluptatibus, earum
+                        at officia! Minus illo dicta molestiae maxime delectus blanditiis sed ipsum tempore sequi
+                        architecto labore, eligendi cum.</p>
                     <a href="#" class="btn btn-outline-light btn-lg">Find Out More</a>
                 </div>
             </div>
@@ -120,35 +132,43 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="./İmg/Discover.jpg" class="img-fluid mb-3 rounded-circle">
+                    <img src="./img/Discover.jpg" class="img-fluid mb-3 rounded-circle">
                 </div>
                 <div class="col-md-6">
-                   <h3>Explore New Place</h3>
-                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae ad rem saepe modi non doloremque totam quisquam corrupti. Aspernatur reiciendis sunt, dicta quisquam nam eveniet temporibus quas eius animi tenetur.</p>
-                   <div class="d-flex">
+                    <h3>Explore New Place</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae ad rem saepe modi non doloremque
+                        totam quisquam corrupti. Aspernatur reiciendis sunt, dicta quisquam nam eveniet temporibus quas
+                        eius animi tenetur.</p>
+                    <div class="d-flex">
                         <div class="p-3 align-self-start">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
-                                <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-caret-right-fill" viewBox="0 0 16 16">
+                                <path
+                                    d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z" />
                             </svg>
                         </div>
                         <div class="p-3 align-self-end">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, voluptatibus?
                         </div>
                     </div>
-                   <div class="d-flex">
+                    <div class="d-flex">
                         <div class="p-3 align-self-start">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
-                                <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-caret-right-fill" viewBox="0 0 16 16">
+                                <path
+                                    d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z" />
                             </svg>
                         </div>
                         <div class="p-3 align-self-end">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, voluptatibus?
                         </div>
                     </div>
-                   <div class="d-flex">
+                    <div class="d-flex">
                         <div class="p-3 align-self-start">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
-                                <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-caret-right-fill" viewBox="0 0 16 16">
+                                <path
+                                    d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z" />
                             </svg>
                         </div>
                         <div class="p-3 align-self-end">
@@ -165,7 +185,9 @@
             <div class="row">
                 <div class="col text-center py-5">
                     <h1 class="display-4">Friends</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio adipisci iste voluptatibus, earum at officia! Minus illo dicta molestiae maxime delectus blanditiis sed ipsum tempore sequi architecto labore, eligendi cum.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio adipisci iste voluptatibus, earum
+                        at officia! Minus illo dicta molestiae maxime delectus blanditiis sed ipsum tempore sequi
+                        architecto labore, eligendi cum.</p>
                     <a href="#" class="btn btn-outline-light btn-lg">Find Out More</a>
                 </div>
             </div>
@@ -176,35 +198,43 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 order-2">
-                    <img src="./İmg/friends2.jpg" class="img-fluid mb-3 rounded-circle">
+                    <img src="./img/friends2.jpg" class="img-fluid mb-3 rounded-circle">
                 </div>
                 <div class="col-md-6 order-1">
-                   <h3>Find New Friends</h3>
-                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae ad rem saepe modi non doloremque totam quisquam corrupti. Aspernatur reiciendis sunt, dicta quisquam nam eveniet temporibus quas eius animi tenetur.</p>
-                   <div class="d-flex">
+                    <h3>Find New Friends</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae ad rem saepe modi non doloremque
+                        totam quisquam corrupti. Aspernatur reiciendis sunt, dicta quisquam nam eveniet temporibus quas
+                        eius animi tenetur.</p>
+                    <div class="d-flex">
                         <div class="p-3 align-self-start">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
-                                <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-caret-right-fill" viewBox="0 0 16 16">
+                                <path
+                                    d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z" />
                             </svg>
                         </div>
                         <div class="p-3 align-self-end">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, voluptatibus?
                         </div>
                     </div>
-                   <div class="d-flex">
+                    <div class="d-flex">
                         <div class="p-3 align-self-start">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
-                                <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-caret-right-fill" viewBox="0 0 16 16">
+                                <path
+                                    d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z" />
                             </svg>
                         </div>
                         <div class="p-3 align-self-end">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, voluptatibus?
                         </div>
                     </div>
-                   <div class="d-flex">
+                    <div class="d-flex">
                         <div class="p-3 align-self-start">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
-                                <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-caret-right-fill" viewBox="0 0 16 16">
+                                <path
+                                    d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z" />
                             </svg>
                         </div>
                         <div class="p-3 align-self-end">
@@ -246,7 +276,10 @@
     <footer class=" py-5 text-center">
         Social Network
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 
 </body>
+
 </html>
